--- a/regfootball/footballs/templates/footballs/team.html
+++ b/regfootball/footballs/templates/footballs/team.html
@@ -10,7 +10,7 @@
      <h4 class="card-header">{{ team.team_full_name }}</h4>
      <div class="card-body">
         <lu>
-         <li>{{ team.region_id }} область
+         <li>{{ team.region }} область
              {% if team.town %}
                --> місто: {{ team.town}}
              {% endif %}</li>
