--- a/regfootball/footballs/templates/footballs/match.html
+++ b/regfootball/footballs/templates/footballs/match.html
@@ -11,7 +11,7 @@
      <div class="card-body">
       <lu>
          <li>Турнір: <a href="">{{ match.mtournament_id }}</a></li>
-         <li>Матч {{ match.round_id }} туру</li>
+         <li>Матч {{ match.round }} туру</li>
          <li>Дата: {{ match.match_date }}</li>
          <li>Стадіон: </li>
          <li>Мачт: {{ match.match_home }} |{{ match.host_team_goals }} : {{ match.visiting_team_goals }}| {{ match.match_guests }}</li>
