--- a/regfootball/footballs/templates/footballs/tournaments_season.html
+++ b/regfootball/footballs/templates/footballs/tournaments_season.html
@@ -10,8 +10,8 @@
 
         <lo><h5>
           <a href="{{ tournament.get_absolute_url }}">
-            <img src="{{ tournament.tournament_id.logotype.url }}" width="50">
-            {{ tournament.tournament_id }}-{{ tournament.season }}
+            <img src="{{ tournament.tournament.logotype.url }}" width="50">
+            {{ tournament.tournament }}-{{ tournament.season }}
           </a>
         </h5></lo>
 
