--- a/regfootball/footballs/templates/footballs/includes/match_list_test.html
+++ b/regfootball/footballs/templates/footballs/includes/match_list_test.html
@@ -10,19 +10,19 @@
                   <table class="table table-striped table-hover">
 
                     {% for match in matches %}         <!-- Розполіл на матчі в турах -->
-                      {% if round.id == match.round_id.id %}
+                      {% if round.id == match.round.id %}
 
                           <tr id="match_id_{{ match.id }}">
 
                             {% if legue %}
                               <td class="tournament_name">
-                                <strong>{{ match.tournament_id}}</strong>
+                                <strong>{{ match.tournament }}</strong>
                               </td>
                             {% endif %}
 
                             {% if name_tour %}
                               <td class="round">
-                                <strong>{{ match.round_id }}</strong>
+                                <strong>{{ match.round }}</strong>
                               </td>
                             {% endif %}
 
@@ -35,14 +35,14 @@
                             </td>
 
 		                    <td class="left-team" width="160" align="right">
-                              <a href="{% url 'footballs:team' match.host_team_id.team_slug %}">
-                                 {{ match.host_team_id }}
+                              <a href="{% url 'footballs:team' match.host_team.team_slug %}">
+                                 {{ match.host_team }}
                               </a>
                             </td>
 
                             <td class="left-logo" width="40" align="center">
-                              <a href="{% url 'footballs:team' match.host_team_id.id %}">
-                                <img src="{{ match.host_team_id.logotype.url }}" height="30">
+                              <a href="{% url 'footballs:team' match.host_team.id %}">
+                                <img src="{{ match.host_team.logotype.url }}" height="30">
                               </a>
                             </td>
 
@@ -59,14 +59,14 @@
                              </td>
 
                             <td class="left-logo" width="40"  align="center">
-                              <a href="{% url 'footballs:team' match.visiting_team_id.id %}">
-                                <img src="{{ match.visiting_team_id.logotype.url }}" height="30">
+                              <a href="{% url 'footballs:team' match.visiting_team.id %}">
+                                <img src="{{ match.visiting_team.logotype.url }}" height="30">
                               </a>
                             </td>
 
 		                    <td class="right-team" width="160">
-                              <a href="{% url 'footballs:team' match.visiting_team_id.team_slug %}">
-                                {{ match.visiting_team_id }}
+                              <a href="{% url 'footballs:team' match.visiting_team.team_slug %}">
+                                {{ match.visiting_team }}
                               </a>
                             </td>
 
