--- a/regfootball/footballs/templates/footballs/tournament.html
+++ b/regfootball/footballs/templates/footballs/tournament.html
@@ -10,8 +10,9 @@
   <div class="card-body" align="center">
 
     {% for team in tournaments %}
-      <a href="{% url 'footballs:team' team.team__team_slug %}">
-        <img height="70" src="{{ team.team__team_slug.url }}"/>
+      <a href="{% url 'footballs:team' team.team_slug %}">
+        <img height="70" src="{{ team.team_slug.url }}"/>
+        <h5>{{ team.team_name }}</h5>
       </a>
     {% endfor %}
 
@@ -22,7 +23,6 @@
     <h5 class="card-header">Турнірна таблиця</h5>
     <div class="card-body">
       <div class="sp-table-wrapper">
-        {% if print_table %}
         <table class="table table-striped table-hover">
           <thead class="table-primary">
             <tr>
@@ -39,32 +39,31 @@
             </tr>
           </thead>
 
-          {% for standing in standings|dictsortreversed:'team_o' %}
+          {% for tournament in tournaments %}
             <tr>
-              <td class="data-rank">{{ forloop.counter }}</td>
-              <td class="data-logo">
-                <a href="{% url 'footballs:team' standing.team.team_slug %}">
-                  <img height="40" src="{{ standing.team.logotype.url }}"/>
+              <td class="data-rank">                                                   <!-- Нумерація рядків таблиці -->
+                {{ forloop.counter }}
+              </td>
+              <td class="data-logo">                                                   <!-- Лого команди -->
+                <a href="{% url 'footballs:team' tournament.team_slug %}">
+                  <img height="40" src="{{ tournament.team_logo.url }}"/>
                 </a>
               </td>
-              <td class="data-name" >
-                  <a href="{% url 'footballs:team' standing.team.team_slug %}">
-                    <strong>{{ standing.team }}</strong>
+              <td class="data-name" >                                                  <!-- Назва команди -->
+                  <a href="{% url 'footballs:team' tournament.team_slug %}">
+                    <strong>{{ tournament.team_name }}</strong>
                   </a>
               </td>
-              <td class="data-p">{{ standing.team_i }}</td>
-              <td class="data-twoeightfivenine">{{ standing.team_v }}</td>
-              <td class="data-twoeightsixzero">{{ standing.team_n }}</td>
-              <td class="data-twoeightsixone">{{ standing.team_p }}</td>
-              <td class="data-twoeightsixtwo" align="center">{{ standing.team_zm }}-{{ standing.team_pm }}</td>
-              <td class="data-twoeightsixfour">{{ standing.team_rm }}</td>
-              <td class="data-twoeightsixfive">{{ standing.team_o }}</td>
+              <td class="data-p">{{ tournament.count_matches }}</td>                   <!-- Кількість зіграних матчів -->
+              <td class="data-twoeightfivenine">{{ tournament.count_wins }}</td>       <!-- Кількість перемог -->
+              <td class="data-twoeightsixzero">{{ tournament.count_draw }}</td>        <!-- Кількість нічиїх -->
+              <td class="data-twoeightsixone">{{ tournament.count_defeat }}</td>       <!-- Кількість поразок -->
+              <td class="data-twoeightsixtwo" align="center">{{ tournament.goals_scored }}-{{ tournament.goals_conceded }}</td>  <!-- Забиті пропущені м'ячі -->
+              <td class="data-twoeightsixfour">{{ tournament.goals_difference }}</td>  <!-- Різниця м'ячів -->
+              <td class="data-twoeightsixfive">{{ tournament.points }}</td>            <!-- КЗалікові бали -->
             </tr>
-          {% empty %}
-            <li><h6>Жодної команди не знайдено.</h6></li>
           {% endfor %}
         </table>
-        {% endif %}
      </div>
     </div>
   </div>                            <!-- Блок: Турнірна таблиця -->
