--- a/regfootball/footballs/templates/footballs/tournaments_list.html
+++ b/regfootball/footballs/templates/footballs/tournaments_list.html
@@ -8,7 +8,9 @@
   <ul>
     {% for tournament in tournaments %}
       <li><h5>
-        <a href="{{ tournament_info.get_absolute_url }}">{{ tournament }} </a>
+        <a href="{{ tournament_info.get_absolute_url }}">
+          <img src="{{ tournament.logotype.url }}" width="30">
+          {{ tournament.name }} </a>
       </h5></li>
     {% empty %}
       <li><h5>Жодного турніру не знайдено.</h5></li>
