--- a/regfootball/footballs/templates/footballs/includes/match_list.html
+++ b/regfootball/footballs/templates/footballs/includes/match_list.html
@@ -1,94 +1,94 @@
 <div class="card mb-3">
   <h4 class="card-header">Результати матчів:</h4>
-  {% for tournament in tournament_unique %}         <!-- Розподіл на турніри -->
+
+  {% for tournament in tournaments_name %}
     <div class="card-body">
       <article class="game-feed match-center" id="matchCenterBlock">
-          {% if league_title %}<h5 class="card-header">{{ tournament.name }}</h5>{% endif %}
+          {% if league_title %}<h5 class="card-header">{{ tournament }}</h5>{% endif %}
 
-          {% for round in tours_unique %}                      <!-- Розподіл на тури -->
-            {% if tour_title %}<h6 class="card-header">{{ round }}</h6>{% endif %}
+          {% for round in rounds %}
+            {% if round_title %}<h6 class="card-header">{{ round }}</h6>{% endif %}<!-- Розподіл на тури -->
 
-                  <table class="table table-striped table-hover">
-                    {% for match in matches %}         <!-- Розполіл на матчі в турах -->
-                      {% if tournament.id == match.tournament.id and round.id == match.round.id %}    <!-- Фільтр по турнірах  -->
+              <table class="table table-striped table-hover">
+                {% for match in matches %}         <!-- Розполіл на матчі в турах -->
+                  {% if tournament == match.tournament__tournament__name and round == match.round__round %}    <!-- Фільтр по турнірах  -->
+                    <tr id="match_id {{ match.id }}">
 
-                          <tr id="match_id_{{ match.id }}">
-
-                            {% if league_match %}
-                              <td class="legue" width="100">
-                               <strong>{{ match.tournament}}</strong>
-                              </td>
-                            {% endif %}
-
-                            {% if tour_match %}
-                              <td class="round" width="60">
-                                <strong>{{ match.round }}</strong>
-                              </td>
-                            {% endif %}
-                               <td class="day-date" width="120">
-                              {{ match.match_date|date:'l - d.m.y' }}
-                            </td>
-
-                            <td class="time" width="30">
-                              {{ match.match_time|time:"G:i" }}
-                            </td>
-
-		                    <td class="left-team" width="160" align="right">
-                              <a href="{% url 'footballs:team' match.host_team.team_slug %}">
-                                 {{ match.host_team }}
-                              </a>
-                            </td>
-
-                            <td class="left-logo" width="40" align="center">
-                              <a href="{% url 'footballs:team' match.host_team.id %}">
-                                <img src="{{ match.host_team.logotype.url }}" height="30">
-                              </a>
-                            </td>
-
-		                     <td class="score" width="60" align="center" >
-                               <div class="score-holder">
-                                 <a href="{% url 'footballs:match' match.id %}">
-                                  {% if match.host_team_goals == None %}
-                                     <strong>- : -</strong>
-                                   {% else %}
-                                     <strong>{{ match.host_team_goals }}:{{ match.visiting_team_goals }}</strong>
-                                   {% endif %}
-                                </a>
-                               </div>
-                             </td>
-
-                            <td class="left-logo" width="40"  align="center">
-                              <a href="{% url 'footballs:team' match.visiting_team.id %}">
-                                <img src="{{ match.visiting_team.logotype.url }}" height="30">
-                              </a>
-                            </td>
-
-		                    <td class="right-team" width="160">
-                              <a href="{% url 'footballs:team' match.visiting_team.team_slug %}">
-                                {{ match.visiting_team }}
-                              </a>
-                            </td>
-
-                            {% if button %}
-<!--                          <td class="edit-matcm">-->
-<!--                            <a href="{% url 'footballs:match' match.id %}">-->
-<!--                              <button class="">Переглянути</button>-->
-<!--                            </a>-->
-<!--                          </td>-->
-
-                              <td class="edit-matcm">
-                                <a href="{% url 'footballs:edit_match' match.id %}">
-                                  <button class="">Редагувати</button>
-                                </a>
-                              </td>
-                            {% endif %}
-                          </tr>  <!-- Таблиця з матчами -->
+                      {% if league_match %}
+                          <td class="legue" width="140">
+                            <strong>{{ match.tournament__tournament__name }}</strong>
+                          </td>
                       {% endif %}
-                    {% endfor %}
-                  </table>
+
+                      {% if round_match %}
+                          <td class="round" width="60">
+                            <strong>{{ match.round__round }}</strong>
+                          </td>
+                      {% endif %}
+
+                        <td class="day-date" width="120">
+                          {{ match.match_date|date:'l - d.m.y' }}
+                        </td>
+
+                        <td class="time" width="30">
+                          {{ match.match_time|time:"G:i" }}
+                        </td>
+
+                        <td class="left-team" width="160" align="right">
+                          <a href="{% url 'footballs:team' match.host_team__team_slug %}">
+                            {{ match.host_team__name }}
+                          </a>
+                        </td>
+
+                        <td class="left-logo" width="40" align="center">
+                          <a href="{% url 'footballs:team' match.host_team__team_slug %}">
+                            <img src="/media/{{ match.host_team__logotype }}" height="30">
+                          </a>
+                        </td>
+
+		                <td class="score" width="60" align="center" >
+                          <div class="score-holder">
+                            <a href="{% url 'footballs:match' match.id %}">
+                              {% if match.host_goals == None %}
+                                <strong>- : -</strong>
+                              {% else %}
+                                <strong>{{ match.host_goals }}:{{ match.visiting_goals }}</strong>
+                              {% endif %}
+                            </a>
+                          </div>
+                        </td>
+
+                        <td class="left-logo" width="40"  align="center">
+                          <a href="{% url 'footballs:team' match.visiting_team__team_slug %}">
+                            <img src="/media/{{ match.visiting_team__logotype }}" height="30">
+                          </a>
+                        </td>
+
+                        <td class="right-team" width="160">
+                          <a href="{% url 'footballs:team' match.visiting_team__team_slug %}">
+                            {{ match.visiting_team__name }}
+                          </a>
+                        </td>
+
+                      {% if button %}
+<!--                      <td class="edit-matcm">-->
+<!--                        <a href="{% url 'footballs:match' match.id %}">-->
+<!--                          <button class="">Переглянути</button>-->
+<!--                        </a>-->
+<!--                     </td>-->
+
+                          <td class="edit-matcm">
+                            <a href="">
+                              <button class="">Редагувати</button>
+                            </a>
+                          </td>
+                      {% endif %}
+                    </tr>  <!-- Таблиця з матчами -->
+                  {% endif %}
+                {% endfor %}
+              </table>
           {% endfor %}
        </article> <!--match-center--><div class='separator'></div>
     </div>
   {% endfor %}
 </div>
-
