--- a/regfootball/footballs/templates/footballs/teams.html
+++ b/regfootball/footballs/templates/footballs/teams.html
@@ -11,7 +11,7 @@
       <li><h5>
         <a href="{{ team.get_absolute_url }}">
           <img src="{{ team.logotype.url }}" width="30">
-          {{ team.team }}
+          {{ team.name }}
         </a>
       </h5></li>
     {% empty %}
