--- a/regfootball/footballs/templates/footballs/tournaments_season.html
+++ b/regfootball/footballs/templates/footballs/tournaments_season.html
@@ -11,7 +11,7 @@
         <lo><h5>
           <a href="{{ tournament.get_absolute_url }}">
             <img src="{{ tournament.tournament.logotype.url }}" width="50">
-            {{ tournament.tournament }}-{{ tournament.season }}
+            {{ tournament.tournament.full_name }}-{{ tournament.season }}
           </a>
         </h5></lo>
 
