--- a/regfootball/footballs/templates/footballs/includes/match_list_1.html
+++ b/regfootball/footballs/templates/footballs/includes/match_list_1.html
@@ -6,26 +6,23 @@
       <article class="game-feed match-center" id="matchCenterBlock">
           {% if league_title %}<h5 class="card-header">{{ tournament }}</h5>{% endif %}
 
-
           {% for round in rounds %}
-            {% if round_title %}<h6 class="card-header">{{ round }}</h6>{% endif %}              <!-- Розподіл на тури -->
-
+            {% if round_title %}<h6 class="card-header">{{ round }}</h6>{% endif %}<!-- Розподіл на тури -->
 
               <table class="table table-striped table-hover">
-                {% for match in matches %}                                                       <!-- Розполіл на матчі в турах -->
-                  {% if tournament == match.tournament__name and round == match.round__round %}  <!-- Фільтр по турнірах  -->
+                {% for match in matches %}         <!-- Розполіл на матчі в турах -->
+                  {% if tournament == match.tournament.tournament.name and round == match.round.round %}    <!-- Фільтр по турнірах  -->
                     <tr id="match_id {{ match.id }}">
 
-
-                      {% if league_match %}                                                       <!-- Вивід назви турніру в заголовку -->
-                          <td class="legue" width="100">
-                            <strong>{{ match.tournament__name }}</strong>
+                      {% if league_match %}
+                          <td class="legue" width="140">
+                            <strong>{{ match.tournament.tournament.name }}</strong>
                           </td>
                       {% endif %}
 
-                      {% if round_match %}                                                        <!-- Вивід раунду в заголовку -->
+                      {% if round_match %}
                           <td class="round" width="60">
-                            <strong>{{ match.round__round }}</strong>
+                            <strong>{{ match.round.round }}</strong>
                           </td>
                       {% endif %}
 
@@ -38,38 +35,38 @@
                         </td>
 
                         <td class="left-team" width="160" align="right">
-                          <a href="{% url 'footballs:team' match.host_team__team_slug %}">
-                            {{ match.host_team__team }}
+                          <a href="{% url 'footballs:team' match.host_team.team_slug %}">
+                            {{ match.host_team.name }}
                           </a>
                         </td>
 
                         <td class="left-logo" width="40" align="center">
-                          <a href="{% url 'footballs:team' match.host_team__id %}">
-                            <img src="{{ match.host_team__logotype.url }}" height="30">
+                          <a href="{% url 'footballs:team' match.host_team.id %}">
+                            <img src="{{ match.host_team.logotype.url }}" height="30">
                           </a>
                         </td>
 
 		                <td class="score" width="60" align="center" >
                           <div class="score-holder">
                             <a href="{% url 'footballs:match' match.id %}">
-                              {% if match.host_team_goals == None %}
+                              {% if match.host_goals == None %}
                                 <strong>- : -</strong>
                               {% else %}
-                                <strong>{{ match.host_team_goals }}:{{ match.visiting_team_goals }}</strong>
+                                <strong>{{ match.host_goals }}:{{ match.visiting_goals }}</strong>
                               {% endif %}
                             </a>
                           </div>
                         </td>
 
                         <td class="left-logo" width="40"  align="center">
-                          <a href="{% url 'footballs:team' match.visiting_team__id %}">
-                            <img src="{{ match.visiting_team__logotype.url }}" height="30">
+                          <a href="{% url 'footballs:team' match.visiting_team.id %}">
+                            <img src="{{ match.visiting_team.logotype.url }}" height="30">
                           </a>
                         </td>
 
                         <td class="right-team" width="160">
-                          <a href="{% url 'footballs:team' match.visiting_team__team_slug %}">
-                            {{ match.visiting_team__team }}
+                          <a href="{% url 'footballs:team' match.visiting_team.team_slug %}">
+                            {{ match.visiting_team.name }}
                           </a>
                         </td>
 
@@ -95,4 +92,3 @@
     </div>
   {% endfor %}
 </div>
-
