--- a/regfootball/footballs/templates/footballs/match.html
+++ b/regfootball/footballs/templates/footballs/match.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block page_header %}
-<!--  <h1><img src="{{ team.logotype.url }}" width="100"> {{ team }}</h1>-->
+<!--  <h1><img src="{{ team.logotype.url }}" width="100"> {{ name }}</h1>-->
 {% endblock page_header %}
 
 {% block content %}
@@ -14,7 +14,7 @@
          <li>Матч {{ match.round }} туру</li>
          <li>Дата: {{ match.match_date }}</li>
          <li>Стадіон: </li>
-         <li>Мачт: {{ match.match_home }} |{{ match.host_team_goals }} : {{ match.visiting_team_goals }}| {{ match.match_guests }}</li>
+         <li>Мачт: {{ match.match_home }} |{{ match.host_goals }} : {{ match.visiting_goals }}| {{ match.match_guests }}</li>
         </lu>
      </div>
   </div>
