--- a/regfootball/templates/base.html
+++ b/regfootball/templates/base.html
@@ -29,9 +29,13 @@
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="{% url 'footballs:tournaments_season' %}">Сезон {% now "Y" %}</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'footballs:tournaments_season' %}">
+            Сезон <!--  {% now "Y" %}-->
+          </a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:teams' %}">Команди</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:matches' %}">Матчі</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'footballs:matches_test' %}">Матчі-test</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:tournaments_list' %}">Турніри</a></li>
         <li class="nav-item"><a class="nav-link" href="">Структура</a></li>
         <li class="nav-item"><a class="nav-link" href="">Сезон</a></li>
