--- a/regfootball/templates/base.html
+++ b/regfootball/templates/base.html
@@ -36,10 +36,10 @@
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:teams' %}">Команди</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:matches' %}">Матчі</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:matches_test' %}">Матчі-test</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'footballs:matches_test1' %}">Матчі-test1</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'footballs:tournaments_list' %}">Турніри</a></li>
         <li class="nav-item"><a class="nav-link" href="">Структура</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Сезон</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Розіграш</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'footballs:tournament1' %}">Розіграш</a></li>
       </ul>
 
       <ul class="navbar-nav ml-auto">
