--- a/regfootball/footballs/templates/footballs/match.html
+++ b/regfootball/footballs/templates/footballs/match.html
@@ -12,9 +12,9 @@
       <lu>
          <li>Турнір: <a href="">{{ match.mtournament_id }}</a></li>
          <li>Матч {{ match.round }} туру</li>
-         <li>Дата: {{ match.match_date }}</li>
+         <li>Дата: {{ match.match_event }}</li>
          <li>Стадіон: </li>
-         <li>Мачт: {{ match.match_home }} |{{ match.host_goals }} : {{ match.visiting_goals }}| {{ match.match_guests }}</li>
+         <li>Мачт: {{ match.match_home }} |{{ match.goals_team1 }} : {{ match.goals_team2 }}| {{ match.match_guests }}</li>
         </lu>
      </div>
   </div>
